<resources>
    <string name="app_name">internalproject</string>
    //signin_layout
    <string name="signin_layout_img">Logo</string>
    <string name="signin_layout_uname">Username</string>
    <string name="signin_layout_password">Password</string>
    <string name="signin_layout_loginB">Login</string>
    <string name="signin_layout_forgotPassTV">Forgot Password?</string>
    <string name="signin_layout_donthaveTV">Dont have an account?</string>
    <string name="signin_layout_registeTV">Register</string>

    //business_registration_layout
    <string name="bus_reg_title">Business Registration</string>
    <string name="bus_name">Name</string>
    <string name="bus_website">Website</string>
    <string name="bus_address">Address</string>
    <string name="bus_reg_button">Register</string>

    //individual_registration_layout
    <string name="indv_reg_title">Individual Registration</string>
    <string name="indv_reg_occupation">Occupation</string>
    <string name="indv_reg_dob">DD/MM/YYYY</string>
    <string name="indv_reg_name">Name</string>
    <string name="indv_reg_registerB">Register</string>
    <string name="indv_reg_radio_male">Male</string>
    <string name="indv_reg_radio_female">Female</string>

    //register_layout
    <string name="register_layout_header">Create Account</string>
    <string name="register_layout_radio_indv">Individual</string>
    <string name="register_layout_radio_org">Organization</string>

    //register0_layout
    <string name="register0_header">User Registration</string>
    <string name="register0_uname">Username(Email)</string>
    <string name="register0_password">Password</string>
    <string name="register0_Conf_pass">Confirm Password</string>
    <string name="register0_createAccB">Create Account</string>
    <string name="register0_alreadyTV">Already Have an Account?</string>
    <string name="register0_signInTV">Sign In</string>
<!--    <string name="app_name">Exam</string>-->
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>

    <string name="button_signout">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //activity_comments
    <string name="Comments">Comments :</string>
    <string name="Comment_hint">write a comment here...</string>

    //activity_splash
    <string name="splash">image</string>

    //forgotpassword_dialog_layout
    <string name="forgotpassword_hint"></string>

    //indv_self_profile
    <string name="indv_self_img">Self image</string>
    <string name="indv_self_uploadB">Upload</string>
    <string name="indv_self_about">About</string>
    <string name="indv_self_connection">My Connections</string>
    <string name="indv_self_endorsement">View Endorsements</string>
    <string name="indv_self_jobs">Applied Jobs</string>
    <string name="indv_self_create">create post</string>
    <string name="indv_self_viewB">View Posts</string>
    <string name="indv_self_name">Name of User</string>
    <string name="indv_self_occupation">Occupation</string>
    <string name="indv_self_aboutfield">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget nisl hendrerit, tincidunt lacus non, pharetra nulla. In rhoncus, augue non posuere convallis, nibh enim feugiat leo, porttitor auctor velit augue sed tortor.</string>
    <string name="indv_self_following">Following</string>

    //org_self_profile
    <string name="org_self_img">Org image</string>
    <string name="org_self_uploadB">Upload</string>
    <string name="org_self_name">Name</string>
    <string name="org_self_aboutUs">ABOUT US</string>
    <string name="org_self_aboutUsField">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget nisl hendrerit, tincidunt lacus non, pharetra nulla. In rhoncus, augue non posuere convallis, nibh enim feugiat leo, porttitor auctor velit augue sed tortor.</string>
    <string name="org_self_viewJobsB">View Jobs</string>
    <string name="org_self_createB">Create Jobs</string>
    <string name="org_self_followers">Followers</string>


</resources>